# ml_interpret_book

./: LICENSE  README.md  pyproject.toml
ch2/: ch2_Linear_Regression.ipynb
ch3/: ch3_Permutation_Feature_Importance.ipynb
ch4/: ch4_Partial_Dependence.ipynb
ch5/: ch5_Individual_Conditional_Expectation.ipynb
ch6/: ch6_SHapley_Additive_exPlanations.ipynb
chA/: chA_tidymodels_dalex.Rmd
chB/: chB_linear_mli.ipynb
data/: boston_housing.pkl
mli/: interpret.py  metrics.py  utility.py  visualize.py
model/: boston_housing_rf.pkl
