[tool.poetry]
name = "draft"
version = "0.1.0"
description = ""
authors = ["dropout009 <mitsunosuke0619@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyterlab = "^3.0.14"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
shap = "^0.39.0"
japanize-matplotlib = "^1.1.3"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
